fix: spacing above journey ??

--- a/src/style/sections/_journey.scss
+++ b/src/style/sections/_journey.scss
@@ -52,6 +52,7 @@
       @include respond(tab-land) {
         width: 100%;
         height: 50px;
+        margin-top: 0;
       }
     }
   }
